Still no changes on the result

--- a/main.html
+++ b/main.html
@@ -75,7 +75,7 @@
 
     <div class="otherItems">
         <p class="hidden incorrectAnswerResponse">Incorrect Answer</p>
-        <input type="text" id="input" >
+        <input type="text" id="input" value = " " placeholder="Enter your answer here">
         <button class="submitBtn"> <span id="submitText">Submit</span> </button>
         <button class="prevBtn" ><span>Previous</span></button>
         <button class="nextBtn" ><span>Next</span></button>
